--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -42,11 +42,21 @@
 #static-box {
     width: 100%;
     height: 40%;
+    font-size: larger;
+    font-weight: bolder;
+}
+
+#average-box {
+    width: 100%;
+    height: 20%;
+    padding: 10px;
+    font-size: larger;
+    font-weight: bolder;
 }
 
 #hover-box {
     width: 100%;
-    height: 60%;
+    height: 40%;
     padding: 10px;
     font-size: larger;
     font-weight: bolder;
